Adding New Images
Adjusting Styling And HTML Elements

--- a/littleLeaders/index.html
+++ b/littleLeaders/index.html
@@ -21,12 +21,23 @@
 
         <div class="the-pet">
             <div class="wrapper">
-                <img src="src/elon/head.png" alt="Head" class="leader-1-head">
-                <img src="src/elon/torso.png" alt="Torso" class="leader-1-torso">
-                <img src="src/elon/arm.png" alt="Larm" class="leader-1-larm">
-                <img src="src/elon/arm.png" alt="Larm" class="leader-1-rarm">
-                <img src="src/elon/arm.png" alt="Larm" class="leader-1-lleg">
-                <img src="src/elon/arm.png" alt="Larm" class="leader-1-rleg">
+                <div class="l1">
+                    <img src="src/elon/head.png" alt="Head" class="leader-1-head">
+                    <img src="src/elon/torso.png" alt="Torso" class="leader-1-torso">
+                    <img src="src/elon/arm.png" alt="Larm" class="leader-1-larm">
+                    <img src="src/elon/arm.png" alt="Larm" class="leader-1-rarm">
+                    <img src="src/elon/arm.png" alt="Larm" class="leader-1-lleg">
+                    <img src="src/elon/arm.png" alt="Larm" class="leader-1-rleg">
+                </div>
+                <div class="l2">
+                    <img src="src/trump/head.png" alt="Head" class="leader-2-head">
+                    <img src="src/trump/torso.png" alt="Torso" class="leader-2-torso">
+                    <img src="src/trump/leg.png" alt="Larm" class="leader-2-larm">
+                    <img src="src/trump/leg.png" alt="Larm" class="leader-2-rarm">
+                    <img src="src/trump/leg.png" alt="Larm" class="leader-2-lleg">
+                    <img src="src/trump/leg.png" alt="Larm" class="leader-2-rleg">
+                </div>
+
             </div>
         </div>
 
