--- a/littleLeaders/index.html
+++ b/littleLeaders/index.html
@@ -4,46 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <title>Pet That Cat!</title>
+    <link rel="stylesheet" href="/littleLeaders/styles.css">
+    <title>LITTLE LEADERS!</title>
 </head>
 <body>
     
-    <div class="container">
 
-        <div class="main-content">
+    <div class="cover"></div>
 
-        </div>
+        <div class="container">
 
-        <div class="main-title floating">    
-            <h1 class="heading-main">LITTLE LEADERS!</h1>
-        </div>
-
-        <div class="the-pet">
-            <div class="wrapper">
-                <div class="l1">
-                    <img src="src/elon/head.png" alt="Head" class="leader-1-head">
-                    <img src="src/elon/torso.png" alt="Torso" class="leader-1-torso">
-                    <img src="src/elon/arm.png" alt="Larm" class="leader-1-larm">
-                    <img src="src/elon/arm.png" alt="Larm" class="leader-1-rarm">
-                    <img src="src/elon/arm.png" alt="Larm" class="leader-1-lleg">
-                    <img src="src/elon/arm.png" alt="Larm" class="leader-1-rleg">
-                </div>
-                <div class="l2">
-                    <img src="src/trump/head.png" alt="Head" class="leader-2-head">
-                    <img src="src/trump/torso.png" alt="Torso" class="leader-2-torso">
-                    <img src="src/trump/leg.png" alt="Larm" class="leader-2-larm">
-                    <img src="src/trump/leg.png" alt="Larm" class="leader-2-rarm">
-                    <img src="src/trump/leg.png" alt="Larm" class="leader-2-lleg">
-                    <img src="src/trump/leg.png" alt="Larm" class="leader-2-rleg">
-                </div>
+            <div class="main-content">
 
             </div>
+
+            <div class="main-title floating">    
+                <h1 class="heading-main">LITTLE LEADERS!</h1>
+            </div>
+
+            <h1 id="charConfirm">TEST</h1>
+            <h1 id="statsNarc">TEST</h1>
+            <h1 id="statsInsec">TEST</h1>
+            <h1 id="statsControv">TEST</h1>
+            <h1 id="statsIntox">TEST</h1>
+
+            <div class="the-pet">
+                <div class="wrapper">
+                    <div class="l1">
+                        <img src="src/elon/head.png" alt="Head" class="leader-1-head">
+                        <img src="src/elon/torso.png" alt="Torso" class="leader-1-torso">
+                        <img src="src/elon/arm.png" alt="Larm" class="leader-1-larm">
+                        <img src="src/elon/arm.png" alt="Larm" class="leader-1-rarm">
+                        <img src="src/elon/arm.png" alt="Larm" class="leader-1-lleg">
+                        <img src="src/elon/arm.png" alt="Larm" class="leader-1-rleg">
+                            <div class="container-key-1">
+                                <a id="selElon" href="javascript:void(0);" onmouseover="elonWave()">Elon</a>
+                            </div>
+                    </div>
+                    <div class="l2">
+                        <img src="src/trump/head.png" alt="Head" class="leader-2-head">
+                        <img src="src/trump/torso.png" alt="Torso" class="leader-2-torso">
+                        <img src="src/trump/leg.png" alt="Larm" class="leader-2-larm">
+                        <img src="src/trump/leg.png" alt="Larm" class="leader-2-rarm">
+                        <img src="src/trump/leg.png" alt="Larm" class="leader-2-lleg">
+                        <img src="src/trump/leg.png" alt="Larm" class="leader-2-rleg">
+                            <div class="container-key-2">
+                                <a id="selDonald" href="javascript:void(0);" onmouseover="donaldWave()">Donald</a>
+                            </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
-    </div>
 
-    <script src="/littleLeaders.js"></script>
+
+    <script src="/littleLeaders/littleLeaders.js"></script>
     
 </body>
 </html>
