Updating new files
Additional Pages, Elon & Trump

--- a/littleLeaders/index.html
+++ b/littleLeaders/index.html
@@ -18,15 +18,17 @@
 
             </div>
 
-            <div class="main-title floating">    
-                <h1 class="heading-main">LITTLE LEADERS!</h1>
+            <div class="main-title floating">
+                <a href="#" style="text-decoration: none;">
+                    <h1 class="heading-main">LITTLE LEADERS!</h1>
+                </a>
             </div>
 
-            <h1 id="charConfirm">TEST</h1>
+            <!-- <h1 id="charConfirm">TEST</h1>
             <h1 id="statsNarc">TEST</h1>
             <h1 id="statsInsec">TEST</h1>
             <h1 id="statsControv">TEST</h1>
-            <h1 id="statsIntox">TEST</h1>
+            <h1 id="statsIntox">TEST</h1> -->
 
             <div class="the-pet">
                 <div class="wrapper">
@@ -38,7 +40,9 @@
                         <img src="src/elon/arm.png" alt="Larm" class="leader-1-lleg">
                         <img src="src/elon/arm.png" alt="Larm" class="leader-1-rleg">
                             <div class="container-key-1">
-                                <a id="selElon" href="javascript:void(0);" onmouseover="elonWave()">Elon</a>
+                                <div style="text-decoration: none;" class="buttonThing">
+                                    <a style="text-decoration: none;color: #ffffff;padding-left: 50px;padding-right: 50px;" id="selElon" href="/littleLeaders/elon.html" onmouseover="elonWave()">Elon</a>
+                                </div>
                             </div>
                     </div>
                     <div class="l2">
@@ -49,7 +53,9 @@
                         <img src="src/trump/leg.png" alt="Larm" class="leader-2-lleg">
                         <img src="src/trump/leg.png" alt="Larm" class="leader-2-rleg">
                             <div class="container-key-2">
-                                <a id="selDonald" href="javascript:void(0);" onmouseover="donaldWave()">Donald</a>
+                                <div style="text-decoration: none;" class="buttonThing">
+                                    <a style="text-decoration: none;color: #ffffff;padding-left: 35px;padding-right: 35px;" id="selDonald" href="/littleLeaders/trump.html" onmouseover="donaldWave()">Donald</a>
+                                </div>
                             </div>
                     </div>
                 </div>
