--- a/littleLeaders/trump.html
+++ b/littleLeaders/trump.html
@@ -21,9 +21,7 @@
                 <div></div>
                 <div><h1 class="heading-main" id="statsInsec">INSECURITY</h1></div>
                 <div></div>
-                <div><h1 class="heading-main" id="statsControv">CONTROVERSY</h1></div>
-                <div></div>
-                <div><h1 class="heading-main" id="statsIntox">INTOXICATION</h1></div>
+                <div><h1 class="heading-main" id="statsInsec">CONTROVERSY</h1></div>
                 <div></div>
                 
             <div>
@@ -33,6 +31,16 @@
             <a href="/littleLeaders/index.html" style="text-decoration: none;">
                 <h1 class="heading-main">LITTLE LEADERS!</h1>
             </a>
+        </div>
+
+        <div class="buttonElon1">
+            <a>TEST</a>
+        </div>
+        <div class="buttonElon2">
+            <a>TEST</a>
+        </div>
+        <div class="buttonElon3">
+            <a>TEST</a>
         </div>
 
         <div class="the-pet"></div>
