--- a/littleLeaders/index.html
+++ b/littleLeaders/index.html
@@ -5,43 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title>Pet That Cat!</title>
+    <title>LITTLE LEADERS!</title>
 </head>
 <body>
     
-    <div class="container">
 
-        <div class="main-content">
+    <div class="cover"></div>
 
-        </div>
+        <div class="container">
 
-        <div class="main-title floating">    
-            <h1 class="heading-main">LITTLE LEADERS!</h1>
-        </div>
-
-        <div class="the-pet">
-            <div class="wrapper">
-                <div class="l1">
-                    <img src="src/elon/head.png" alt="Head" class="leader-1-head">
-                    <img src="src/elon/torso.png" alt="Torso" class="leader-1-torso">
-                    <img src="src/elon/arm.png" alt="Larm" class="leader-1-larm">
-                    <img src="src/elon/arm.png" alt="Larm" class="leader-1-rarm">
-                    <img src="src/elon/arm.png" alt="Larm" class="leader-1-lleg">
-                    <img src="src/elon/arm.png" alt="Larm" class="leader-1-rleg">
-                </div>
-                <div class="l2">
-                    <img src="src/trump/head.png" alt="Head" class="leader-2-head">
-                    <img src="src/trump/torso.png" alt="Torso" class="leader-2-torso">
-                    <img src="src/trump/leg.png" alt="Larm" class="leader-2-larm">
-                    <img src="src/trump/leg.png" alt="Larm" class="leader-2-rarm">
-                    <img src="src/trump/leg.png" alt="Larm" class="leader-2-lleg">
-                    <img src="src/trump/leg.png" alt="Larm" class="leader-2-rleg">
-                </div>
+            <div class="main-content">
 
             </div>
+
+            <div class="main-title floating">
+                <a href="#" style="text-decoration: none;">
+                    <h1 class="heading-main">LITTLE LEADERS!</h1>
+                </a>
+            </div>
+
+            <!-- <h1 id="charConfirm">TEST</h1>
+            <h1 id="statsNarc">TEST</h1>
+            <h1 id="statsInsec">TEST</h1>
+            <h1 id="statsControv">TEST</h1>
+            <h1 id="statsIntox">TEST</h1> -->
+
+            <div class="the-pet">
+                <div class="wrapper">
+                    <!-- <div class="l1">
+                        <img src="src/elon/head.png" alt="Head" class="leader-1-head">
+                        <img src="src/elon/torso.png" alt="Torso" class="leader-1-torso">
+                        <img src="src/elon/arm.png" alt="Larm" class="leader-1-larm">
+                        <img src="src/elon/arm.png" alt="Larm" class="leader-1-rarm">
+                        <img src="src/elon/arm.png" alt="Larm" class="leader-1-lleg">
+                        <img src="src/elon/arm.png" alt="Larm" class="leader-1-rleg">
+                            <div class="container-key-1">
+                                <div style="text-decoration: none;" class="buttonThing">
+                                    <a style="text-decoration: none;color: #ffffff;padding-left: 50px;padding-right: 50px;" id="selElon" href="/musk.html" onmouseover="elonWave()">Elon</a>
+                                </div>
+                            </div>
+                    </div> -->
+                    <div class="l2">
+                        <img src="src/trump/head.png" alt="Head" class="leader-2-head">
+                        <img src="src/trump/torso.png" alt="Torso" class="leader-2-torso">
+                        <img src="src/trump/leg.png" alt="Larm" class="leader-2-larm">
+                        <img src="src/trump/leg.png" alt="Larm" class="leader-2-rarm">
+                        <img src="src/trump/leg.png" alt="Larm" class="leader-2-lleg">
+                        <img src="src/trump/leg.png" alt="Larm" class="leader-2-rleg">
+                            <div class="container-key-2">
+                                <div style="text-decoration: none;" class="buttonThing" onmouseover="donaldWave()">
+                                    <a style="text-decoration: none;color: #ffffff;padding-left: 35px;padding-right: 35px;" id="selDonald" href="/donald.html">Donald</a>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
-    </div>
+
 
     <script src="/littleLeaders.js"></script>
     
